--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -83,7 +83,7 @@ lectures:
   - date: 2019-11-15
     title: Context-free grammars
     type: 
-    slides: 
+    slides: lectures/06-cfg.pdf
     reading:
     - author: Jurafsky &amp; Martin
       title: Chapters 12.1-12.3, 12.5, 13.1-13.3
@@ -97,10 +97,18 @@ lectures:
       optional: true
       
   - date: 2019-11-19
-    title: 
+    title: Complexity of algorithms and the CKY parser
     type: 
     slides: 
     reading: 
+    - author: Jurafsky &amp; Martin
+      title: Chapter 12.4
+    - author: Khan Academy
+      title: Asymptotic notation
+      url: https://www.khanacademy.org/computing/computer-science/algorithms/asymptotic-notation/a/asymptotic-notation
+    assignment:
+    - label: A2 due
+      
   - date: 2019-11-22
     title: 
     type: 
