--- a/_data/navbar.yaml
+++ b/_data/navbar.yaml
@@ -24,5 +24,6 @@ navbar:
       - title: A5 (Word alignments)
         url: assignments/cl-a5.pdf
       - title: A6 (LDA)
+        url: assignments/cl-a6.pdf
 
         
